# image-projection

./: .gitignore  Cargo.toml  README.md  build.rs
res/calibration/: calibration.blend  calibration.mtl
src/: README.md  axis_shader.wgsl  camera.rs  cube.rs  lib.rs  model.rs  resources.rs  shader.wgsl  test_shader.wgsl  texture.rs
