[package]
name = "image-projection"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.10.1"
log = "0.4.20"
winit = { version = "0.29.9", features = ["rwh_05"] }
wgpu = "0.18.0"
pollster = "0.3.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
anyhow = "1.0.79"
glam = "0.25.0"
tobj = { version = "4.0.0", features = ["async"] }
instant = "0.1.12"

[dependencies.image]
version = "0.24.8"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement", "Location"] }
wgpu = { version = "0.18.0", features = ["webgl"] }
reqwest = { version = "0.11" }
